thirdparty/crates/zerocopy-derive-0.8.52/tests/ui/cfgs/on_error.msrv.stderr
error: `on_error` is experimental; pass '--cfg zerocopy_unstable_linux' to enable
  --> $DIR/on_error.rs:13:10
   |
13 | #[derive(FromBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

